--- a/res/layout/main2.xml
+++ b/res/layout/main2.xml
@@ -3,9 +3,16 @@
     android:id="@+id/linearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
- 
+
     <TextView
         android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="I&apos;m screen 2 (main2.xml)"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+ 
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I&apos;m screen 2 (main2.xml)"
